.antlr/qsParser.java
// Generated from d:\projects\YRC\QuickScript\antlr\qsParser.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class qsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CMPR=1, CRSR=2, DVAR=3, EQUALS=4, EXIT=5, GOTO=6, INFO=7, LABL=8, NOOP=9, 
		NUMPARAMS=10, NUMSTMTS=11, PARAM=12, PRMT=13, PPUP=14, REFCOUNT=15, RUNM=16, 
		RVAR=17, SNDK=18, STMT=19, STMTID=20, SVAR=21, VERSION=22, WTXT=23, LBRACK=24, 
		RBRACK=25, ELSE=26, THEN=27, STRING_LITERAL=28, NUMBER_INT=29, IDENTIFIER=30, 
		SPACE=31, COMMENT=32, LINE_COMMENT=33;
	public static final int
		RULE_qscript_file = 0, RULE_info_statement = 1, RULE_version_clause = 2, 
		RULE_num_stmts_clause = 3, RULE_statements = 4, RULE_statement = 5, RULE_statement_type = 6, 
		RULE_statement_CMPR = 7, RULE_statement_CRSR = 8, RULE_statement_DVAR = 9, 
		RULE_statement_EXIT = 10, RULE_statement_GOTO = 11, RULE_statement_LABL = 12, 
		RULE_statement_NOOP = 13, RULE_statement_PRMT = 14, RULE_statement_PPUP = 15, 
		RULE_statement_RUNM = 16, RULE_statement_RVAR = 17, RULE_statement_SNDK = 18, 
		RULE_statement_SVAR = 19, RULE_statement_WTXT = 20, RULE_params = 21, 
		RULE_param = 22, RULE_parameter_count = 23, RULE_reference_count = 24, 
		RULE_integer_value = 25, RULE_then_clause = 26, RULE_else_clause = 27, 
		RULE_identifier = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"qscript_file", "info_statement", "version_clause", "num_stmts_clause", 
			"statements", "statement", "statement_type", "statement_CMPR", "statement_CRSR", 
			"statement_DVAR", "statement_EXIT", "statement_GOTO", "statement_LABL", 
			"statement_NOOP", "statement_PRMT", "statement_PPUP", "statement_RUNM", 
			"statement_RVAR", "statement_SNDK", "statement_SVAR", "statement_WTXT", 
			"params", "param", "parameter_count", "reference_count", "integer_value", 
			"then_clause", "else_clause", "identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'='", null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CMPR", "CRSR", "DVAR", "EQUALS", "EXIT", "GOTO", "INFO", "LABL", 
			"NOOP", "NUMPARAMS", "NUMSTMTS", "PARAM", "PRMT", "PPUP", "REFCOUNT", 
			"RUNM", "RVAR", "SNDK", "STMT", "STMTID", "SVAR", "VERSION", "WTXT", 
			"LBRACK", "RBRACK", "ELSE", "THEN", "STRING_LITERAL", "NUMBER_INT", "IDENTIFIER", 
			"SPACE", "COMMENT", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "qsParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public qsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Qscript_fileContext extends ParserRuleContext {
		public Info_statementContext info_statement() {
			return getRuleContext(Info_statementContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(qsParser.EOF, 0); }
		public Qscript_fileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qscript_file; }
	}

	public final Qscript_fileContext qscript_file() throws RecognitionException {
		Qscript_fileContext _localctx = new Qscript_fileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_qscript_file);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			info_statement();
			setState(59);
			statements();
			setState(60);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Info_statementContext extends ParserRuleContext {
		public TerminalNode LBRACK() { return getToken(qsParser.LBRACK, 0); }
		public TerminalNode INFO() { return getToken(qsParser.INFO, 0); }
		public TerminalNode RBRACK() { return getToken(qsParser.RBRACK, 0); }
		public Version_clauseContext version_clause() {
			return getRuleContext(Version_clauseContext.class,0);
		}
		public Num_stmts_clauseContext num_stmts_clause() {
			return getRuleContext(Num_stmts_clauseContext.class,0);
		}
		public Info_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_info_statement; }
	}

	public final Info_statementContext info_statement() throws RecognitionException {
		Info_statementContext _localctx = new Info_statementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_info_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(LBRACK);
			setState(63);
			match(INFO);
			setState(64);
			match(RBRACK);
			setState(65);
			version_clause();
			setState(66);
			num_stmts_clause();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Version_clauseContext extends ParserRuleContext {
		public TerminalNode VERSION() { return getToken(qsParser.VERSION, 0); }
		public TerminalNode EQUALS() { return getToken(qsParser.EQUALS, 0); }
		public Integer_valueContext integer_value() {
			return getRuleContext(Integer_valueContext.class,0);
		}
		public Version_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_version_clause; }
	}

	public final Version_clauseContext version_clause() throws RecognitionException {
		Version_clauseContext _localctx = new Version_clauseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_version_clause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(VERSION);
			setState(69);
			match(EQUALS);
			setState(70);
			integer_value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Num_stmts_clauseContext extends ParserRuleContext {
		public TerminalNode NUMSTMTS() { return getToken(qsParser.NUMSTMTS, 0); }
		public TerminalNode EQUALS() { return getToken(qsParser.EQUALS, 0); }
		public Integer_valueContext integer_value() {
			return getRuleContext(Integer_valueContext.class,0);
		}
		public Num_stmts_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_num_stmts_clause; }
	}

	public final Num_stmts_clauseContext num_stmts_clause() throws RecognitionException {
		Num_stmts_clauseContext _localctx = new Num_stmts_clauseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_num_stmts_clause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(NUMSTMTS);
			setState(73);
			match(EQUALS);
			setState(74);
			integer_value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_statements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(76);
				statement();
				}
				}
				setState(79); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==LBRACK );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public TerminalNode LBRACK() { return getToken(qsParser.LBRACK, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode RBRACK() { return getToken(qsParser.RBRACK, 0); }
		public Statement_typeContext statement_type() {
			return getRuleContext(Statement_typeContext.class,0);
		}
		public Reference_countContext reference_count() {
			return getRuleContext(Reference_countContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(LBRACK);
			setState(82);
			identifier();
			setState(83);
			match(RBRACK);
			setState(84);
			statement_type();
			setState(85);
			reference_count();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Statement_typeContext extends ParserRuleContext {
		public Statement_CRSRContext statement_CRSR() {
			return getRuleContext(Statement_CRSRContext.class,0);
		}
		public Parameter_countContext parameter_count() {
			return getRuleContext(Parameter_countContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public Statement_CMPRContext statement_CMPR() {
			return getRuleContext(Statement_CMPRContext.class,0);
		}
		public Then_clauseContext then_clause() {
			return getRuleContext(Then_clauseContext.class,0);
		}
		public Else_clauseContext else_clause() {
			return getRuleContext(Else_clauseContext.class,0);
		}
		public Statement_DVARContext statement_DVAR() {
			return getRuleContext(Statement_DVARContext.class,0);
		}
		public Statement_EXITContext statement_EXIT() {
			return getRuleContext(Statement_EXITContext.class,0);
		}
		public Statement_GOTOContext statement_GOTO() {
			return getRuleContext(Statement_GOTOContext.class,0);
		}
		public ParamContext param() {
			return getRuleContext(ParamContext.class,0);
		}
		public Statement_LABLContext statement_LABL() {
			return getRuleContext(Statement_LABLContext.class,0);
		}
		public Statement_NOOPContext statement_NOOP() {
			return getRuleContext(Statement_NOOPContext.class,0);
		}
		public Statement_PPUPContext statement_PPUP() {
			return getRuleContext(Statement_PPUPContext.class,0);
		}
		public Statement_PRMTContext statement_PRMT() {
			return getRuleContext(Statement_PRMTContext.class,0);
		}
		public Statement_RUNMContext statement_RUNM() {
			return getRuleContext(Statement_RUNMContext.class,0);
		}
		public Statement_RVARContext statement_RVAR() {
			return getRuleContext(Statement_RVARContext.class,0);
		}
		public Statement_SNDKContext statement_SNDK() {
			return getRuleContext(Statement_SNDKContext.class,0);
		}
		public Statement_SVARContext statement_SVAR() {
			return getRuleContext(Statement_SVARContext.class,0);
		}
		public Statement_WTXTContext statement_WTXT() {
			return getRuleContext(Statement_WTXTContext.class,0);
		}
		public Statement_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement_type; }
	}

	public final Statement_typeContext statement_type() throws RecognitionException {
		Statement_typeContext _localctx = new Statement_typeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_statement_type);
		try {
			setState(145);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				statement_CRSR();
				setState(88);
				parameter_count();
				setState(89);
				params();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				statement_CMPR();
				setState(92);
				parameter_count();
				setState(93);
				params();
				setState(94);
				then_clause();
				setState(95);
				else_clause();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(97);
				statement_DVAR();
				setState(98);
				parameter_count();
				setState(99);
				params();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(101);
				statement_EXIT();
				setState(102);
				parameter_count();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(104);
				statement_GOTO();
				setState(105);
				parameter_count();
				setState(106);
				param();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(108);
				statement_LABL();
				setState(109);
				parameter_count();
				setState(110);
				params();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(112);
				statement_NOOP();
				setState(113);
				parameter_count();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(115);
				statement_PPUP();
				setState(116);
				parameter_count();
				setState(117);
				params();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(119);
				statement_PRMT();
				setState(120);
				parameter_count();
				setState(121);
				params();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(123);
				statement_RUNM();
				setState(124);
				parameter_count();
				setState(125);
				params();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(127);
				statement_RVAR();
				setState(128);
				parameter_count();
				setState(129);
				params();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(131);
				statement_SNDK();
				setState(132);
				parameter_count();
				setState(133);
				params();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(135);
				statement_SVAR();
				setState(136);
				parameter_count();
				setState(137);
				params();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(139);
				statement_WTXT();
				setState(140);
				parameter_count();
				setState(141);
				params();
				setState(142);
				then_clause();
				setState(143);
				else_clause();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Statement_CMPRContext extends ParserRuleContext {
		public TerminalNode STMTID() { return getToken(qsParser.STMTID, 0); }
		public TerminalNode EQUALS() { return getToken(qsParser.EQUALS, 0); }
		public TerminalNode CMPR() { return getToken(qsParser.CMPR, 0); }
		public Statement_CMPRContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement_CMPR; }
	}

	public final Statement_CMPRContext statement_CMPR() throws RecognitionException {
		Statement_CMPRContext _localctx = new Statement_CMPRContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_statement_CMPR);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(STMTID);
			setState(148);
			match(EQUALS);
			setState(149);
			match(CMPR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Statement_CRSRContext extends ParserRuleContext {
		public TerminalNode STMTID() { return getToken(qsParser.STMTID, 0); }
		public TerminalNode EQUALS() { return getToken(qsParser.EQUALS, 0); }
		public TerminalNode CRSR() { return getToken(qsParser.CRSR, 0); }
		public Statement_CRSRContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement_CRSR; }
	}

	public final Statement_CRSRContext statement_CRSR() throws RecognitionException {
		Statement_CRSRContext _localctx = new Statement_CRSRContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_statement_CRSR);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(STMTID);
			setState(152);
			match(EQUALS);
			setState(153);
			match(CRSR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Statement_DVARContext extends ParserRuleContext {
		public TerminalNode STMTID() { return getToken(qsParser.STMTID, 0); }
		public TerminalNode EQUALS() { return getToken(qsParser.EQUALS, 0); }
		public TerminalNode DVAR() { return getToken(qsParser.DVAR, 0); }
		public Statement_DVARContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement_DVAR; }
	}

	public final Statement_DVARContext statement_DVAR() throws RecognitionException {
		Statement_DVARContext _localctx = new Statement_DVARContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_statement_DVAR);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(STMTID);
			setState(156);
			match(EQUALS);
			setState(157);
			match(DVAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Statement_EXITContext extends ParserRuleContext {
		public TerminalNode STMTID() { return getToken(qsParser.STMTID, 0); }
		public TerminalNode EQUALS() { return getToken(qsParser.EQUALS, 0); }
		public TerminalNode EXIT() { return getToken(qsParser.EXIT, 0); }
		public Statement_EXITContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement_EXIT; }
	}

	public final Statement_EXITContext statement_EXIT() throws RecognitionException {
		Statement_EXITContext _localctx = new Statement_EXITContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_statement_EXIT);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(STMTID);
			setState(160);
			match(EQUALS);
			setState(161);
			match(EXIT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Statement_GOTOContext extends ParserRuleContext {
		public TerminalNode STMTID() { return getToken(qsParser.STMTID, 0); }
		public TerminalNode EQUALS() { return getToken(qsParser.EQUALS, 0); }
		public TerminalNode GOTO() { return getToken(qsParser.GOTO, 0); }
		public Statement_GOTOContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement_GOTO; }
	}

	public final Statement_GOTOContext statement_GOTO() throws RecognitionException {
		Statement_GOTOContext _localctx = new Statement_GOTOContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_statement_GOTO);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(STMTID);
			setState(164);
			match(EQUALS);
			setState(165);
			match(GOTO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Statement_LABLContext extends ParserRuleContext {
		public TerminalNode STMTID() { return getToken(qsParser.STMTID, 0); }
		public TerminalNode EQUALS() { return getToken(qsParser.EQUALS, 0); }
		public TerminalNode LABL() { return getToken(qsParser.LABL, 0); }
		public Statement_LABLContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement_LABL; }
	}

	public final Statement_LABLContext statement_LABL() throws RecognitionException {
		Statement_LABLContext _localctx = new Statement_LABLContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_statement_LABL);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			match(STMTID);
			setState(168);
			match(EQUALS);
			setState(169);
			match(LABL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Statement_NOOPContext extends ParserRuleContext {
		public TerminalNode STMTID() { return getToken(qsParser.STMTID, 0); }
		public TerminalNode EQUALS() { return getToken(qsParser.EQUALS, 0); }
		public TerminalNode NOOP() { return getToken(qsParser.NOOP, 0); }
		public Statement_NOOPContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement_NOOP; }
	}

	public final Statement_NOOPContext statement_NOOP() throws RecognitionException {
		Statement_NOOPContext _localctx = new Statement_NOOPContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_statement_NOOP);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			match(STMTID);
			setState(172);
			match(EQUALS);
			setState(173);
			match(NOOP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Statement_PRMTContext extends ParserRuleContext {
		public TerminalNode STMTID() { return getToken(qsParser.STMTID, 0); }
		public TerminalNode EQUALS() { return getToken(qsParser.EQUALS, 0); }
		public TerminalNode PRMT() { return getToken(qsParser.PRMT, 0); }
		public Statement_PRMTContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement_PRMT; }
	}

	public final Statement_PRMTContext statement_PRMT() throws RecognitionException {
		Statement_PRMTContext _localctx = new Statement_PRMTContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_statement_PRMT);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			match(STMTID);
			setState(176);
			match(EQUALS);
			setState(177);
			match(PRMT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Statement_PPUPContext extends ParserRuleContext {
		public TerminalNode STMTID() { return getToken(qsParser.STMTID, 0); }
		public TerminalNode EQUALS() { return getToken(qsParser.EQUALS, 0); }
		public TerminalNode PPUP() { return getToken(qsParser.PPUP, 0); }
		public Statement_PPUPContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement_PPUP; }
	}

	public final Statement_PPUPContext statement_PPUP() throws RecognitionException {
		Statement_PPUPContext _localctx = new Statement_PPUPContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_statement_PPUP);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			match(STMTID);
			setState(180);
			match(EQUALS);
			setState(181);
			match(PPUP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Statement_RUNMContext extends ParserRuleContext {
		public TerminalNode STMTID() { return getToken(qsParser.STMTID, 0); }
		public TerminalNode EQUALS() { return getToken(qsParser.EQUALS, 0); }
		public TerminalNode RUNM() { return getToken(qsParser.RUNM, 0); }
		public Statement_RUNMContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement_RUNM; }
	}

	public final Statement_RUNMContext statement_RUNM() throws RecognitionException {
		Statement_RUNMContext _localctx = new Statement_RUNMContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_statement_RUNM);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			match(STMTID);
			setState(184);
			match(EQUALS);
			setState(185);
			match(RUNM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Statement_RVARContext extends ParserRuleContext {
		public TerminalNode STMTID() { return getToken(qsParser.STMTID, 0); }
		public TerminalNode EQUALS() { return getToken(qsParser.EQUALS, 0); }
		public TerminalNode RVAR() { return getToken(qsParser.RVAR, 0); }
		public Statement_RVARContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement_RVAR; }
	}

	public final Statement_RVARContext statement_RVAR() throws RecognitionException {
		Statement_RVARContext _localctx = new Statement_RVARContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_statement_RVAR);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(187);
			match(STMTID);
			setState(188);
			match(EQUALS);
			setState(189);
			match(RVAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Statement_SNDKContext extends ParserRuleContext {
		public TerminalNode STMTID() { return getToken(qsParser.STMTID, 0); }
		public TerminalNode EQUALS() { return getToken(qsParser.EQUALS, 0); }
		public TerminalNode SNDK() { return getToken(qsParser.SNDK, 0); }
		public Statement_SNDKContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement_SNDK; }
	}

	public final Statement_SNDKContext statement_SNDK() throws RecognitionException {
		Statement_SNDKContext _localctx = new Statement_SNDKContext(_ctx, getState());
		enterRule(_localctx, 36, RULE_statement_SNDK);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(191);
			match(STMTID);
			setState(192);
			match(EQUALS);
			setState(193);
			match(SNDK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Statement_SVARContext extends ParserRuleContext {
		public TerminalNode STMTID() { return getToken(qsParser.STMTID, 0); }
		public TerminalNode EQUALS() { return getToken(qsParser.EQUALS, 0); }
		public TerminalNode SVAR() { return getToken(qsParser.SVAR, 0); }
		public Statement_SVARContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement_SVAR; }
	}
